<resources>
    <string name="app_name">RawMotors</string>
    <string name="title">Raw Motors</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="usuarioNoExiste">El usuario no existe</string>
    <string name="contraseñaInvalida">La contraseña es incorrecta</string>
    <string name="loginOk">Inicio se sesión correcto</string>
    <string name="forgotPass">"Correo de recuperación enviado a: "</string>
    <string name="login">Iniciar sesión</string>
    <string name="registro">Registro</string>
    <string name="forgot_pass">Forgot pass</string>
    <string name="mainTitle">Bienvenido a Raw Motors!</string>
    <string name="adelante">Adelante!</string>
    <string name="email">Email</string>
    <string name="confirmar">Confirmar</string>
    <string name="registroCompletado">Registro exitoso</string>
    <string name="contraseñaDebil">La contraseña introducida es demasiado débil. Pon una mejor</string>
    <string name="credencialesInvalidos">Email y contraseñas no válidos</string>
    <string name="colisionUsuario">Ya existe un usuario registrado con estas credenciales.</string>
    <string name="errorDesconocido">Error desconocido. Pruebe otra vez</string>
    <string name="camposRegistroNoRellenos">Rellena todos los campos porfavor.</string>
    <string name="emailRecuperacionEnviado">Email Enviado: Mira tu bandeja de entrada</string>
    <string name="emailRecuperacionFallo">Error. No se pudo enviar el email de recuperación</string>
    <string name="addPieza">Añade tu producto a tu inventario</string>
    <string name="piezaInsertada">Pieza insertada correctamente</string>
    <string name="exito">Registro exitoso</string>
    <string name="continuar">Continuar</string>
    <string name="piezaNoInsertada">Error en la insercción</string>
    <string name="error">Error</string>
    <string name="reintentar">Reintentar</string>
    <string name="loginFallido">Login fallido</string>
    <string name="checkEmail">Revisa tu bandeja de entrada</string>
    <string name="lblIntroInfo">Introduce tus datos para mandarte tu producto</string>
    <string name="lblNomCalle">Nombre de la calle</string>
    <string name="lblNumCalle">Número</string>
    <string name="lblCodPost">Cod. Postal</string>
    <string name="lblCiudad">Ciudad</string>
    <string name="lblNumTlf">Número de teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="marca">Marca</string>
    <string name="model">Modelo</string>
    <string name="desc">Descripción</string>
    <string name="precio">Precio</string>
    <string name="adPieza">Añadir pieza</string>
    <string name="addCorrrect">Información guardada correctamente</string>
    <string name="addedWrong">No ha sido posible guardar la información correctamente</string>
    <string name="editar">Editar</string>
    <string name="buscador">Buscador</string>
    <string name="buscar">Buscar</string>
    <string name="inicio">Inicio</string>
    <string name="piezaEditada">Producto editado correctamente</string>
    <string name="piezaNoEditada">Error en la edición</string>
    <string name="edita_tu_pieza">Edita tu pieza</string>
    <string name="exitoso">Exito</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="dataTarjeta">Introduce los datos de la tarjeta</string>
    <string name="appelidos">Apellidos</string>
    <string name="numTarjeta">Número de la tarjeta</string>
    <string name="fechaCad">Fecha vencimiento</string>
    <string name="CVV">CVV</string>
    <string name="MMYY">MM/YY</string>
    <string name="euro">€</string>
    <string name="piezaComprada">Pieza comprada</string>
    <string name="productosComprados">Productos comprados</string>
    <string name="productosVendidos">Productos vendidos</string>
    <string name="vendido">Vendido</string>
    <string name="comprado">Comprado</string>


    <array name="filtros">
        <item>Nombre</item>
        <item>Marca</item>
        <item>Modelo</item>
    </array>
    <array name="tiposVia">
        <item>Avenida</item>
        <item>Calle</item>
        <item>Camino</item>
        <item>Pasaje</item>
        <item>Carretera</item>
    </array>
</resources>