<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/bg_gradient"
    tools:context=".AddPiezaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        android:textColor="@color/black">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/edita_tu_pieza"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:textColorHint="@color/black"
        android:background="@drawable/btn_botones_redondos_marron"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="17dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/nombre"
            android:background="@drawable/btn_botones_redondos_marron"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ly3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lblBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marca"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/btn_botones_redondos_marron"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ly2"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEditModel"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_botones_redondos_marron"
                android:hint="@string/model"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:counterEnabled="true"
        app:counterMaxLength="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditDesc"
            android:inputType="text"
            android:paddingVertical="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_botones_redondos_marron"
            android:hint="@string/desc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditPrice"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:background="@drawable/btn_botones_redondos_marron"
            android:layout_height="wrap_content"
            android:hint="@string/precio" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>